--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
@@ -47,7 +49,9 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/csurf": "^1.11.2",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.24",
     "@types/mongodb": "^3.6.19",
